# realtime_audio_server

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  bets_are_off.opus  launch.sh  run_clang_tidy_or_format.sh
src/: CMakeLists.txt  main.cpp  ring_buffer.cpp  ring_buffer.h  stub.cpp  stub.h
src/client/: client.h  main.cpp
src/server/: main.cpp  server.cpp  server.h
src/util/: util_dump.h
test/: CMakeLists.txt  test_main.cpp
